// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при клике на кнопку "выделение цветом" залогирует событие клика 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": 197,
  "price": 60,
  "serviceId": "all_sale_color",
}
`;

exports[`при клике на кнопку "выделение цветом" откроет окно оплаты с правильными параметрами 1`] = `
Object {
  "category": "cars",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "services": Array [
    Object {
      "currency": "RUR",
      "days": 3,
      "description": "Отличная возможность выделить своё предложение среди других&nbsp;&mdash; в&nbsp;результатах поиска оно будет привлекать больше внимания.",
      "multiplier": 2,
      "name": "Выделение цветом",
      "need_confirm": false,
      "original_price": 197,
      "price": 60,
      "recommendation_priority": 6,
      "service": "all_sale_color",
      "title": "Автомобиль купят гораздо быстрее",
    },
  ],
  "shouldShowSuccessTextAfter": true,
  "shouldUpdateOfferAfter": false,
  "shouldUpdateUserOffersAfter": true,
}
`;

exports[`при клике на кнопку "оплатить" в блоке васов залогирует событие клика 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": 997,
  "price": 300,
  "serviceId": "all_sale_toplist",
}
`;

exports[`при клике на кнопку "оплатить" в блоке васов залогирует событие клика 2`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": 497,
  "price": 150,
  "serviceId": "all_sale_special",
}
`;

exports[`при клике на кнопку "оплатить" в блоке васов откроет окно оплаты с правильными параметрами когда нет скидки 1`] = `
Object {
  "category": "cars",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "services": Array [
    Object {
      "auto_prolong_price": 497,
      "currency": "RUR",
      "days": 3,
      "description": "Ваше объявление будет отображаться в&nbsp;специальном блоке в&nbsp;результатах поиска и на&nbsp;карточках объявлений о&nbsp;продаже аналогичных авто. А&nbsp;для легковых&nbsp;&mdash; также на&nbsp;главной странице и&nbsp;в&nbsp;Каталоге.",
      "multiplier": 5,
      "name": "Спецпредложение",
      "need_confirm": false,
      "original_price": 497,
      "price": 150,
      "prolongation_allowed": true,
      "recommendation_priority": 8,
      "service": "all_sale_special",
      "title": "Увеличивает количество просмотров объявления в 5 раз",
    },
    Object {
      "auto_prolong_price": 997,
      "currency": "RUR",
      "days": 3,
      "description": "Ваше объявление окажется в&nbsp;специальном блоке на&nbsp;самом верху списка при сортировке по актуальности или по дате. Покупатели вас точно не&nbsp;пропустят.",
      "multiplier": 15,
      "name": "Поднятие в ТОП",
      "need_confirm": false,
      "original_price": 997,
      "price": 300,
      "prolongation_allowed": true,
      "recommendation_priority": 10,
      "service": "all_sale_toplist",
      "title": "Увеличивает количество просмотров объявления в 15 раз",
    },
  ],
  "shouldShowSuccessTextAfter": true,
  "shouldUpdateOfferAfter": false,
  "shouldUpdateUserOffersAfter": true,
}
`;

exports[`при клике на кнопку "поднятие в поиске" залогирует событие клика 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": undefined,
  "price": 197,
  "serviceId": "all_sale_fresh",
}
`;

exports[`при клике на кнопку "поднятие в поиске" откроет окно оплаты с правильными параметрами 1`] = `
Object {
  "category": "cars",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "services": Array [
    Object {
      "auto_apply_price": 197,
      "currency": "RUR",
      "days": 1,
      "description": "Самый недорогой способ продвижения, который позволит вам в&nbsp;любой момент оказаться наверху списка объявлений, отсортированного по актуальности или по дате. Это поможет быстрее найти покупателя&nbsp;&mdash; ведь предложения в&nbsp;начале списка просматривают гораздо чаще.",
      "multiplier": 3,
      "name": "Поднятие в&nbsp;поиске",
      "need_confirm": false,
      "price": 197,
      "recommendation_priority": 4,
      "service": "all_sale_fresh",
      "title": "Лучшее место для вашего объявления",
    },
  ],
  "shouldShowSuccessTextAfter": true,
  "shouldUpdateOfferAfter": true,
  "shouldUpdateUserOffersAfter": false,
}
`;
